Fix MACHINE LEARNING ENGINEER bottom edge alignement

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -271,9 +271,11 @@ body.sub-page .sub-title {
 }
 
 .sub-page .ml-subtitle {
-  font-size: clamp(1rem, 2vw + 0.5rem, 1.5rem);
+  font-size: clamp(1rem, 2vw + 0.66rem, 2rem);
   font-weight: 300;
   line-height: 1;
+  position: relative;
+  top: -0.1em; /* Adjust vertical alignment */
 }
 
 .ml-description {
